fix char gender enum fm
